--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -10,6 +10,10 @@
 	height: 50px;
 	background-color:#59b256;
 }
+.a-desc h3{
+	text-decoration: underline;
+	text-align: center;
+}
 .a-left {
 	flex: 1;
 	display: flex;
@@ -120,6 +124,10 @@
 	.a-card.bg,
 	.a-award,.underline {
 		display: none;
+	}
+	.a-desc{
+		text-align: start;
+		padding: 10px;
 	}
 	.a-card {
 		width: 100%;
