--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -86,22 +86,46 @@ button {
 	.c-wrapper {
 		flex-direction: column;
 		padding: 0px 50px;
+		height: 60%;
+	}
+	.c-left {
+		flex: 1;
+		padding: 10px;
 	}
 	.c-title {
-		font-weight: 500;
+		font-weight: 600;
 		width: 100%;
-		font-size: 50px;
+		font-size: 35px;
+		text-align: center;
 	}
 	.c-info-item {
 		bottom: 0px;
 		margin: 20px 0px;
+		font-size: 18px;
+		font-weight: 400;
+	}
+	.c-right {
+		flex: 1;
+		padding: 10px;
+	}
+	form {
+		height: 100%;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
 	input {
-		width: 85%;
+		width: 100%;
+		padding: 10px;
+		margin: 0px;
 		text-align: center;
-		font-size: 20px;
+		font-size: 15px;
 	}
-	.c-desc {
+	button {
+		width: 150px;
+	}
+	.c-desc{
 		display: none;
 	}
 }
